--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Redis tokens retrieved here: https://console.upstash.com/
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+# Arcjet API key retrieved here: https://arcjet.com
 ARCJET_KEY=
